clusters/home-lab/cdk8s_definitions/dist/prod-infra/traefik/traefik.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: prod
  labels:
    app.kubernetes.io/instance: traefik-prod-infra
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-24.0.0
  name: traefik
  namespace: prod-infra
spec:
  loadBalancerIP: 192.168.1.250
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-prod-infra
    app.kubernetes.io/name: traefik
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: traefik-prod-infra
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-24.0.0
  name: traefik
  namespace: prod-infra
spec:
  minReadySeconds: 0
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: traefik-prod-infra
      app.kubernetes.io/name: traefik
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: traefik-prod-infra
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: traefik
        helm.sh/chart: traefik-24.0.0
    spec:
      containers:
        - args:
            - --global.checknewversion
            - --global.sendanonymoususage
            - --entrypoints.metrics.address=:9100/tcp
            - --entrypoints.traefik.address=:9000/tcp
            - --entrypoints.web.address=:80/tcp
            - --entrypoints.websecure.address=:443/tcp
            - --api.dashboard=true
            - --ping=true
            - --metrics.datadog=true
            - --metrics.datadog.address=datadog-cluster-agent:5005
            - --metrics.prometheus=true
            - --metrics.prometheus.entrypoint=metrics
            - --providers.kubernetescrd
            - --providers.kubernetesingress
            - --providers.kubernetesgateway
            - --experimental.kubernetesgateway
            - --entrypoints.web.http.redirections.entryPoint.to=:443
            - --entrypoints.web.http.redirections.entryPoint.scheme=https
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.websecure.http.tls.domains[0].main=st0rmingbr4in.com
            - --entrypoints.websecure.http.tls.domains[0].sans=*.st0rmingbr4in.com
            - --entrypoints.websecure.http.tls.domains[1].main=aphorya.fr
            - --entrypoints.websecure.http.tls.domains[1].sans=*.aphorya.fr
          image: docker.io/traefik:v3.2.3@sha256:efb87236c8c92599bcd3a67a7a8a55e0f255665f4719722bf398935aa9b92270
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          name: traefik
          ports:
            - containerPort: 9100
              name: metrics
              protocol: TCP
            - containerPort: 9000
              name: traefik
              protocol: TCP
            - containerPort: 80
              name: web
              protocol: TCP
            - containerPort: 443
              name: websecure
              protocol: TCP
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /ping
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              memory: 110Mi
            requests:
              cpu: 500m
              memory: 110Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /tmp
              name: tmp
      hostNetwork: false
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      volumes:
        - emptyDir: {}
          name: data
        - emptyDir: {}
          name: tmp
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/instance: traefik-prod-infra
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-24.0.0
  name: traefik
  namespace: prod-infra
spec:
  controller: traefik.io/ingress-controller
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/instance: traefik-prod-infra
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-24.0.0
  name: traefik-gateway
  namespace: prod-infra
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: web
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.st0rmingbr4in.com"
      name: websecure-st0rmingbr4in
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: core
            kind: Secret
            name: st0rmingbr4in.com-cert
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.aphorya.fr"
      name: websecure-aphorya
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: core
            kind: Secret
            name: aphorya.fr-cert
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  labels:
    app.kubernetes.io/instance: traefik-prod-infra
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-24.0.0
  name: traefik
  namespace: prod-infra
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-prod-infra
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-24.0.0
  name: traefik-dashboard
  namespace: prod-infra
spec:
  entryPoints:
    - traefik
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
